# datascipsych-refactor

./: README.md  pyproject.toml
jupyter/: exploration.ipynb
src/refactor/: analysis.py
src/refactor/data/: data.xlsx
