[project]
name = "datascipsych-refactor"
version = "0.1.0"
description = "Code project to demonstrate refactoring methods."
authors = [
    {name = "Neal W Morton", email = "mortonne@gmail.com"}
]
dependencies = [
    "git+https://github.com/mortonne/datascipsych",
    "polars",
    "jupyterlab",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
