[project]
name = "refactor"
version = "0.1.0"
description = "Code project to demonstrate refactoring methods."
authors = [
    {name = "Neal W Morton", email = "mortonne@gmail.com"}
]
dependencies = [
    "polars~=1.27.1",
    "jupyterlab",
    "xlsxwriter",
    "fastexcel",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
